# version-watch

./: LICENSE  README.md  pyproject.toml
version_watch/: __init__.py  changelog.py  cli.py  deprecation.py  differ.py  linter.py  planner.py  reporter.py  rules.py
